simplify friction definition

--- a/mbdyn/manual/input/modules.tex
+++ b/mbdyn/manual/input/modules.tex
@@ -106,7 +106,6 @@ implements a scalar mass-damper-spring system.
 
     \bnt{module_data} ::=
         (\ty{StructDispNode}) \bnt{NonsmoothNODELABEL} ,
-        [ \kw{frictional} , \{ \kw{yes} | \kw{no} | (\ty{bool}) \bnt{frictional} \} , ]
         \kw{mass} , (\ty{real}) \bnt{mass} ,
         \kw{radius} , (\ty{real}) \bnt{radius} ,
         \kw{planes} , (\ty{integer}) \bnt{number_of_planes} ,
@@ -114,9 +113,9 @@ implements a scalar mass-damper-spring system.
                 \kw{position} , (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_plane_position} ,
                 \kw{rotation orientation} , (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{rel_rot_orientation_1} ,
                 \kw{restitution} , (\ty{real}) \bnt{rest_coeff}
-                [ , \kw{friction coefficient} , (\ty{real}) \bnt{mu} ] # only if \nt{frictional} is true
-                [ , ... ]
-        [ , \kw{constraint type} , \{ \kw{position} | \kw{velocity} | \kw{both} \} ] # default: both
+                [ , \kw{friction coefficient} , (\ty{real}) \bnt{mu} ] 
+            [ , ... ] # as many blocks as \nt{number_of_planes}
+        [ , \kw{constraint type} , \{ \kw{position} | \kw{velocity} | \kw{both} \} ] # default: \kw{both}
         [ , \kw{theta} , \bnt{theta} ]
         [ , \kw{gamma} , \bnt{gamma} ]
         [ , \kw{LCP solver} , \bnt{solver} ]
