--- a/mbdyn/manual/input/input.tex
+++ b/mbdyn/manual/input/input.tex
@@ -49,6 +49,7 @@
 \newcommand{\bkw}[1]{\texttt{<\textcolor{red}{#1}>}}
 \newcommand{\nt}[1]{\textcolor{blue}{\texttt{#1}}}
 \newcommand{\bnt}[1]{\texttt{<\textcolor{blue}{#1}>}}
+\newcommand{\be}[1]{\texttt{<{#1}>}}
 \newcommand{\ty}[1]{\textcolor{green}{\texttt{#1}}}
 \newcommand{\bty}[1]{\texttt{<\textcolor{green}{#1}>}}
 
