embryonic documentation of new modules

--- a/mbdyn/manual/input/modules.tex
+++ b/mbdyn/manual/input/modules.tex
@@ -79,6 +79,110 @@ This module implements inflow models for cycloidal rotors.
         [ , \kw{timestep} , \bnt{time_step} ]
 \end{Verbatim}
 
+\subsection{Module-fab-electric}
+\emph{Author: Eduardo Okabe}
+
+\noindent
+This module implements several electric components.
+
+\subsubsection{Resistor}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{resistor}
+\end{Verbatim}
+
+\subsubsection{Capacitor}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{capacitor}
+\end{Verbatim}
+
+\subsubsection{Inductor}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{inductor}
+\end{Verbatim}
+
+\subsubsection{Diode}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{diode}
+\end{Verbatim}
+
+\subsubsection{Switch}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{switch}
+\end{Verbatim}
+
+\subsubsection{Electrical source}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{electrical source}
+\end{Verbatim}
+
+\subsubsection{Ideal transformer}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{ideal transformer}
+\end{Verbatim}
+
+\subsubsection{Operational amplifier}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{operational amplifier}
+\end{Verbatim}
+
+\subsubsection{BJT}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{bjt}
+\end{Verbatim}
+
+\subsubsection{Proximity sensor}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{proximity sensor}
+\end{Verbatim}
+
+
+
+\subsection{Module-fab-motion}
+\emph{Author: Eduardo Okabe}
+
+\noindent
+This module implements several joints.
+
+\subsubsection{Gear joint}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{gear joint}
+\end{Verbatim}
+
+\subsubsection{Linear transmission joint}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{linear transmission joint}
+\end{Verbatim}
+
+\subsubsection{Motion transmission joint}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{motion transmission joint}
+\end{Verbatim}
+
+\subsubsection{Smooth step}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{smooth step}
+\end{Verbatim}
+
+
+
+\subsection{Module-fab-sbearings}
+\emph{Author: Eduardo Okabe}
+
+\noindent
+This module implements several joints.
+
+\subsubsection{Hydrodynamic bearing}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{hydrodynamic bearing}
+\end{Verbatim}
+
+\subsubsection{Rolling bearing}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{name} ::= \kw{rolling bearing}
+\end{Verbatim}
+
+
+
 \subsection{Module-hydrodynamic\_plain\_bearing}
 \emph{Author: Reinhard Resch}
 
