document condition number output

--- a/mbdyn/manual/input/problems.tex
+++ b/mbdyn/manual/input/problems.tex
@@ -1299,6 +1299,8 @@ This command requests special output related to the solution phase.
             | \kw{messages}
             | \kw{counter}
             | \kw{bailout}
+            | \kw{matrix condition number}
+            | \kw{solver condition number}
             | \kw{none} \}
 \end{Verbatim}
 %\end{verbatim}
