--- a/mbdyn/manual/input/modules.tex
+++ b/mbdyn/manual/input/modules.tex
@@ -319,8 +319,54 @@ This module implements a simple hydraulic damper with turbulent orifice and reli
 \subsection{Module-muscles}
 \emph{Authors: Andrea Zanoni and Pierangelo Masarati}
 
+\bigskip
+
 \noindent
-This module implements a family of simple muscle constitutive laws.
+This module implements a family of simple muscle constitutive laws,
+based on \cite{PENNESTRI-2007-JB}.
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{drive_caller} ::= \kw{muscle Pennestri}
+        [ \kw{initial length} , \bnt{Li} , ]
+        \kw{reference length} , \bnt{L0} ,
+        [ \kw{reference velocity} , \bnt{V0} , ]
+        \kw{reference force} , \bnt{F0} ,
+        \kw{activation} , \ty{DriveCaller} \bnt{activation}
+            [ , \kw{activation check} , \ty{bool}\bnt{activation_check} ]
+        [ , \kw{ergonomy} , \{ \kw{yes} | \kw{no} \} , ]
+        [ , \kw{reflexive} , # only when ergonomy == no
+            \kw{proportional gain} , \bnt{kp} ,
+            \kw{derivative gain} , \bnt{kd} ,
+            \kw{reference length} , \ty{DriveCaller} \bnt{lref} ]
+\end{Verbatim}
+The \kw{ergonomy} flag, when active, indicates that the equivalent damping
+must not be used.
+It is used to indicate that the constitutive law acts as an ``ergonomy''
+spring in an inverse kinematics analysis.
+
+The \kw{reflexive} keyword indicates that reflexive behavior is being defined;
+its use is mutually exclusive with the active status of the \kw{ergonomy} flag.
+
+The \kw{initial length} equal to \kw{reference length} unless specified.
+It is used to differentiate the length of the rod as computed from the input
+from the length used to formulate the constitutive law.
+
+The \kw{reference velocity} is set to 2.5 m/s unless specified.
+
+The second occurrence of the \kw{reference length} is related
+to the reflexive contribution to muscular activation, which is defined as
+\begin{align}
+	a
+	&=
+	\nt{activation}
+	+
+	\nt{kp} \cdot \plbr{
+		\frac{\ell}{\nt{L0}}
+		-
+		\frac{\nt{lref}}{\nt{L0}}
+	}
+	+
+	\nt{kd} \cdot \frac{\dot{\ell}}{\nt{V0}}
+\end{align}
 
 
 
