--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -33,6 +33,8 @@ MBDyn 1.X-Devel
 		- improved module-octave (Reinhard Resch)
 		- added check for symmetry of inertia tensor
 		- added several modules by Eduardo Okabe (module-fab-*/)
+		- added algebraic equations scaling (Reinhard Resch)
+		- added support for octave 3.8.1 (Reinhard Resch)
 	Backward compatibility issues:
 		- "overwrite" option of "setenv" changed
 		- incompatible module-aerodyn syntax change
@@ -60,6 +62,7 @@ MBDyn 1.X-Devel
 		- fixed memory issue in eigenanalysis (Reinhard Resch)
 		- fixed bug in acceleration computation
 		  (noted by Reinhard Resch)
+		- fixed bug in rigid body kinetic energy (Reinhard Resch)
 
 MBDyn 1.5.5
 	Enhancements:
