more joints with NetCDF support (Louis Gagnon)

--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -35,6 +35,7 @@ MBDyn 1.X-Devel
 		- added several modules by Eduardo Okabe (module-fab-*/)
 		- added algebraic equations scaling (Reinhard Resch)
 		- added support for octave 3.8.1 (Reinhard Resch)
+		- more joints with NetCDF support (Louis Gagnon)
 	Backward compatibility issues:
 		- "overwrite" option of "setenv" changed
 		- incompatible module-aerodyn syntax change
