--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -13,7 +13,7 @@ MBDyn 1.X-Devel
 	Enhancements:
 		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added explicit cast to math parser
-		- added loads fade in in module-aerodyn
+		- added loads fade-in in module-aerodyn
 		  (Jens van Schelve, Patrick Rix)
 		- added "drivep" (derivative) function to model namespace
 		- added measures in aircraft instruments
