--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -9,9 +9,8 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
-MBDyn 1.X-Devel
+MBDyn 1.5.6
 	Enhancements:
-		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added explicit cast to math parser
 		- added loads fade-in in module-aerodyn
 		  (Jens van Schelve, Patrick Rix)
