--- a/mbdyn/manual/input/elemaero.tex
+++ b/mbdyn/manual/input/elemaero.tex
@@ -546,6 +546,8 @@ The former can be expressed in different forms, while the latter
 are based on three-dimensional drive callers, \htmlref{\ty{TplDriveCaller}\bty{Vec3}}{sec:TplDriveCaller}.
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{elem_type} ::= \kw{air properties}
+
     \bnt{arglist} ::=
         \{ (\htmlref{\ty{DriveCaller}}{sec:DriveCaller}) \bnt{air_density} , (\ty{real}) \bnt{sound_celerity}
             | \kw{std} , \{ \{ \kw{SI} | \kw{British} \}
