clarify that only about the third axis is the angular velocity meaninglful

--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -4886,7 +4886,8 @@ for the first 13 columns; specific columns contain:
 	that describe the relative rotation; only the third component
 	is relevant, the first two essentially indicate the accuracy
 	of the rotation constraint;
-\item column 17--19: the relative angular velocity;
+\item column 17--19: the relative angular velocity; only the third component
+	is relevant, the first two are zero.
 \end{itemize}
 If friction is present:
 \begin{itemize}
