--- a/mbdyn/TODO
+++ b/mbdyn/TODO
@@ -201,7 +201,7 @@ D. Code:
 	- check computed inertia with that from block 12 in modal joint (DONE)
 	- add linear time variant constitutive law (DONE)
 	- add elastic and viscous variants of linear time variant const law
-	- add record for damping matrix to modal input format
+	- add record for damping matrix to modal input format (DONE, RECORD 13)
 	- define a UserDefinedElem class; inherit LoadableElem from it;
 	  allow UserDefined elements to be loaded run-time
 	  (obsoletes LoadableElem; UserDefinedElem, DONE)
@@ -275,9 +275,11 @@ E. Bugs/missing features:
 	- call nodes/elements in the order of definition (DONE)
 	- modal joint: binary file written in input order, but parsed in block ascending order (DONE)
 	- module-loadinc: improve initialization and handling of driven load increment element
-	- math parser: handle uninitialized values
+	- math parser: handle uninitialized values (DONE?)
 	- handle .rfm files in mbdyn2easyanim
-	- use "dot" to generate model graph
+	- use "dot" to generate model graph (DONE, in module-dot)
+	- add capability to run-time load a generic (context-dependent?)
+	  "description"
 
 
 
