--- a/mbdyn/manual/tecman/tecman.tex
+++ b/mbdyn/manual/tecman/tecman.tex
@@ -37,6 +37,7 @@
 %\usepackage[dvips,breaklinks=true,colorlinks=false]{hyperref}
 \usepackage{html}
 \usepackage{comment}
+\usepackage{color}
 
 \input{../stdmacro}
 %poor man's bold symbol
