--- a/mbdyn/manual/tecman/tecman-aero.tex
+++ b/mbdyn/manual/tecman/tecman-aero.tex
@@ -1487,3 +1487,6 @@ where $\delta_{ni}$ is Dirac's delta, which is 1 when $i=n$, and 0 otherwise.
 
 \section{Rotor}
 \input{tecman-aero-rotor}
+
+\section{Aero Modal}
+\input{tecman-aero-modal}
