ready for release

--- a/mbdyn/NEWS
+++ b/mbdyn/NEWS
@@ -9,6 +9,8 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
+* Dec 15, 2014: release of MBDyn 1.6.0
+
 * Aug 01, 2014: release of MBDyn 1.5.6
 
 * Apr 02, 2013: release of MBDyn 1.5.5
