--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -12,6 +12,12 @@ Paolo Mantegazza        <mantegazza@aero.polimi.it>
 MBDyn 1.X-Devel
 	Enhancements:
 		- added screw joint (Mauro Manetti & Marco Morandini)
+	Backward compatibility issues:
+	Known issues:
+	Bug fixes:
+
+MBDyn 1.6.0
+	Enhancements:
 		- added central gravity field (suggested by Linh H. Phan)
 		- added automatic differentiation support to drive callers
 		  and constitutive laws (Reinhard Resch)
