--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -15,6 +15,7 @@ MBDyn 1.X-Devel
 		- added hostname support to utils
 		- added module for file drive input from LeapMotion device
 		- rod without offset now works with displacement nodes
+		- added several modules (Reinhard Resch)
 	Backward compatibility issues:
 	Known issues:
 		- nested calls to string drive callers deadlock
